fixes spelling error and adds admin-visible-only email addresses to users show pages

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -42,8 +42,12 @@
 	font-weight: bold;
 	letter-spacing: 2px;
 	h1 {
-		margin-top: 15px;
+		margin: 15px auto 10px;
 	} 
+	h4 {
+		margin-bottom: 20px;
+		color: darkslategray;
+	}
 }
 
 // admin //
